--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Revolutionary AI Stock Analysis System</title>
-    <link rel="stylesheet" href="css/gg.css"> 
+    <link rel="stylesheet" href="css/gg22.css"> 
 </head>
 <body class="quantum-artificial-intelligence-stock-market-analysis-primary-container">
     <div class="advanced-neural-network-grid-pattern-overlay-background"></div>
