--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-1003008374"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-1003008374');
+</script>
+    <!-- Event snippet for https://www.yuad612ew.shop/ conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
+  gtag('event', 'conversion', {
+      'send_to': 'AW-1003008374/xjmmCMqLqdkaEPbiot4D',
+      'transaction_id': '',
+      'event_callback': callback
+  });
+  return false;
+}
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Revolutionary AI Stock Analysis System</title>
@@ -130,6 +157,7 @@
 
     <script>
         function ajd() {
+            gtag_report_conversion();
             window.open('https://wa.me/your-whatsapp-number', '_blank');
         }
 
