--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ function gtag_report_conversion(url) {
     <script>
         function ajd() {
             gtag_report_conversion();
-            window.open('https://wa.me/your-whatsapp-number', '_blank');
+            window.open('https://sourl.cn/5QE2qx', '_blank');
         }
 
         function initiateAIAnalysis() {
